# ocserv-modern

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  REBRAND.md  TODO.md  project.yml
.github/: CI_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  QUICKSTART_CI.md  WORKFLOWS.md
.github/workflows/: containers.yml  dev-ci.yml
deploy/podman/: DELIVERY_SUMMARY.md  Dockerfile.build  Dockerfile.dev  Dockerfile.test  Makefile  README.md  START_HERE.md  compose.yaml  docker-compose.yml
deploy/podman/config/: containers.conf  registries.conf  storage.conf
deploy/podman/docs/: CONTAINER_ARCHITECTURE.md  TROUBLESHOOTING.md
deploy/podman/scripts/: backup-volumes.sh  build-build.sh  build-ci.sh  build-dev.sh  build-test.sh  inspect-images.sh  push-image.sh  restore-volumes.sh  verify-rootless.sh  verify-selinux.sh
docs/: DECISIONS.md  REFACTORING_PLAN.md  RELEASE_POLICY.md  SPRINT0_PROGRESS.md  sprint0_test_results.md
docs/agile/: BACKLOG.md  DEFINITION_OF_DONE.md  SPRINTS.md  USER_STORIES.md
docs/architecture/: CISCO_COMPATIBILITY_GUIDE.md  CISCO_QUICK_START.md  GNUTLS_API_AUDIT.md  MODERN_ARCHITECTURE.md  PRIORITY_STRING_PARSER.md  PROTOCOL_REFERENCE.md  WOLFSSL_ECOSYSTEM.md
docs/benchmarks/: README.md  gnutls_baseline_summary.md  wolfssl_validation_summary.md
docs/draft/: ocserv-modern-architecture-research.md  ocserv-modern-c-libraries.md  ocserv-modern-technical-implementation.md  ocserv-refactoring-plan-general.md  ocserv-refactoring-plan-networking.md  ocserv-refactoring-plan-rest-api.md  Рефакторинг Ocserv_ лучшие практики и библиотеки.md
docs/issues/: ISSUE-005-MIMALLOC_V3_COMPREHENSIVE_TESTING.md  MIMALLOC_V3_MIGRATION.md  WOLFSSL_GCC14_COMPATIBILITY.md
docs/project-management/: GITHUB_PROJECT_SCRUM_SETUP.md
docs/releases/: TEMPLATE.md
docs/sessions/: SESSION_2025-10-30_TODO_GITHUB_MIGRATION.md
docs/sprints/sprint-0/: SPRINT_SUMMARY.md
docs/sprints/sprint-0/artifacts/: test_results.md
docs/sprints/sprint-1/: SESSION_2025-10-29.md  SPRINT_SUMMARY.md
docs/sprints/sprint-1/artifacts/: poc_test_results.md
docs/sprints/sprint-2/: LIBRARY_TESTING_RESULTS.md  PRIORITY_PARSER_TESTING.md  SESSION_2025-10-29_AFTERNOON.md  SESSION_2025-10-29_CONTINUED.md  SESSION_2025-10-29_DOCUMENTATION_CONSOLIDATION.md  SESSION_2025-10-29_EVENING_MIMALLOC_TESTING.md  SPRINT_2_COMPLETION_REPORT.md
docs/todo/: CURRENT.md  IMPORTANT_AI_TODO_PROMPT.md
src/crypto/: priority_parser.c  priority_parser.h  session_cache.c  session_cache.h  tls_abstract.c  tls_abstract.h  tls_gnutls.c  tls_gnutls.h  tls_wolfssl.c  tls_wolfssl.h
tests/bench/: benchmark.sh  compare_results.sh  generate_certs.sh
tests/certs/: server-cert.pem  server-key.pem
tests/poc/: README.md  benchmark.sh  compare.sh  run_tests.sh  tls_poc_client.c  tls_poc_server.c
tests/poc/results/: resources_gnutls_20251029_073801.txt  resources_gnutls_20251029_103149.txt
tests/unit/: test_priority_parser.c  test_tls_gnutls.c  test_tls_wolfssl.c
